tiny spacing fixes

--- a/css/structure.css
+++ b/css/structure.css
@@ -48,7 +48,7 @@ pre, code {
 
 .navbar {
   width: 100%;
-  height: 27px;
+  height: 25px;
   position: fixed;
   padding-top: .4em;
   padding-bottom: .3em;
@@ -177,6 +177,7 @@ input {
   font-size: 1em;
   border: none;
   border-radius: 5px;
+  margin-right: 1px;
 }
 
 textarea:focus {
@@ -186,6 +187,7 @@ textarea:focus {
 button {
   font-size: 1em;
   margin: 0;
+  margin-right: 1px;
   padding-top: 0;
   padding-bottom: 0;
   border: 1px solid #ccc;
